tests/should-fail/unknown-type.ls
import io;

main :: SomeUndefinedType;
main = error "blah";
